# CMakeList.txt : CMake project for Chip8Emulator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chip8Emulator "Chip8Emulator.cpp" "Chip8Emulator.h")

# TODO: Add tests and install targets if needed.
